scroll fix test, have to commit to test on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,6 +47,9 @@ h6 {
   z-index: -1; /* behind your content */
   pointer-events: none;
 }
+#tsparticles canvas {
+  pointer-events: none !important;
+}
 
 /* Solid black layer behind particles */
 .black-background {
